--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 # Xcode
 #
 # gitignore contributors: remember to update Global/Xcode.gitignore, Objective-C.gitignore & Swift.gitignore
-
+test
 ## Build generated
 build/
 DerivedData/
